--- a/publication/genloco_hb/cite.bib
+++ b/publication/genloco_hb/cite.bib
@@ -1,6 +1,18 @@
-@article{song2022optimal,
-  title={An Optimal Motion Planning Framework for Quadruped Jumping},
-  author={Song, Zhitao and Yue, Linzhu and Sun, Guangli and Ling, Yihu and Wei, Hongshuo and Gui, Linhai and Liu, Yun-Hui},
-  journal={arXiv preprint arXiv:2207.12002},
-  year={2022}
+@article{DBLP:journals/corr/abs-2306-14802,
+  author       = {Min An and
+                  Qiyuan Fan and
+                  Hao Yu and
+                  Haiyang Zhao},
+  title        = {Blockchain technology research and application: a systematic literature
+                  review and future trends},
+  journal      = {CoRR},
+  volume       = {abs/2306.14802},
+  year         = {2023},
+  url          = {https://doi.org/10.48550/arXiv.2306.14802},
+  doi          = {10.48550/arXiv.2306.14802},
+  eprinttype    = {arXiv},
+  eprint       = {2306.14802},
+  timestamp    = {Tue, 27 Jun 2023 17:45:46 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2306-14802.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
